# rainsensor

./: .env.example  .gitignore  README.md  config.yaml.example  ecosystem.config.js  pyproject.toml  requirements.txt
rain_sensor/: __init__.py  __main__.py  cli.py  config.py  db.py  decision.py  scheduler.py  state.py
rain_sensor/relay/: __init__.py  base.py  gpio_backend.py  i2c_backend.py
rain_sensor/weather/: __init__.py  cache.py  client.py
rain_sensor/web/: __init__.py  app.py
rain_sensor/web/static/: style.css
rain_sensor/web/templates/: index.html
scripts/: install.sh
systemd/: rain-sensor-web.service  rain-sensor.service
tests/: test_decision.py  test_relay.py  test_weather_cache.py
tests/bruno/: 01_get_status.bru  02_get_forecast.bru  03_get_history.bru  04_get_v1_status.bru  05_post_override_suppress.bru  06_post_override_allow.bru  07_post_override_clear.bru  08_post_check.bru  09_post_override_invalid.bru  bruno.json
